--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -8,5 +8,8 @@ FastReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Ability.Movement.Jump",DevComment="")
++GameplayTagList=(Tag="Ability.Weapon.Attacks.BootsCombo",DevComment="")
 +GameplayTagList=(Tag="Event.Character.Landed",DevComment="")
++GameplayTagList=(Tag="Event.Montage",DevComment="")
 
