feat - Add new combo abilities GA_BootsKickCombo and GA_KeyHitCombo, with animation featuring trails VFXs

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -10,6 +10,7 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Movement.Jump",DevComment="")
 +GameplayTagList=(Tag="Ability.Weapon.Attacks.BootsCombo",DevComment="")
++GameplayTagList=(Tag="Ability.Weapon.Attacks.KeyCombo",DevComment="")
 +GameplayTagList=(Tag="Event.Character.Landed",DevComment="")
 +GameplayTagList=(Tag="Event.Montage",DevComment="")
 
