--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -13,4 +13,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Weapon.Attacks.KeyCombo",DevComment="")
 +GameplayTagList=(Tag="Event.Character.Landed",DevComment="")
 +GameplayTagList=(Tag="Event.Montage",DevComment="")
++GameplayTagList=(Tag="Event.Montage.TraceCollision",DevComment="")
++GameplayTagList=(Tag="GameplayCue.HitImpact",DevComment="")
++GameplayTagList=(Tag="SetByCaller.Damage",DevComment="")
 
