--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -8,6 +8,7 @@ FastReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Ability.Movement.Crouch",DevComment="")
 +GameplayTagList=(Tag="Ability.Movement.Jump",DevComment="")
 +GameplayTagList=(Tag="Ability.Weapon.Attacks.BootsCombo",DevComment="")
 +GameplayTagList=(Tag="Ability.Weapon.Attacks.KeyCombo",DevComment="")
